--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  google_client_id: 502261561154-n9aukpm247g8mrvfbo9vstg35c8gvaia.apps.googleusercontent.com
+  google_client_secret: Yb8YWhIppASEzezUsWhmpbKX
